--- a/package.json
+++ b/package.json
@@ -20,9 +20,11 @@
     "class-variance-authority": "^0.7.1",
     "clsx": "^2.1.1",
     "embla-carousel-react": "^8.5.2",
+    "lodash-es": "^4.17.21",
     "lucide-react": "^0.485.0",
     "next": "15.2.4",
     "next-themes": "^0.4.6",
+    "pnpm": "^10.7.1",
     "react": "^19.0.0",
     "react-dom": "^19.0.0",
     "react-hook-form": "^7.55.0",
@@ -33,10 +35,10 @@
   },
   "devDependencies": {
     "@tailwindcss/postcss": "^4",
+    "@types/lodash-es": "^4.17.12",
     "@types/node": "^20",
     "@types/react": "^19",
     "@types/react-dom": "^19",
-    "prettier": "3.5.3",
     "tailwindcss": "^4",
     "typescript": "^5"
   }
